syntax = "proto3";

option go_package = "/grpc/pb/area;pb";

package area;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service Area {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc ListArea(google.protobuf.Empty) returns (AreaList) {}
  rpc CreateArea(CreateRequest) returns (AreaFull) {}
  rpc UpdateArea(UpdateRequest) returns (google.protobuf.Empty) {}
  rpc DeleteArea(AreaId) returns (google.protobuf.Empty) {}
}

message CreateRequest {
  string name = 1;
  string description = 2;
  string image = 3;
  string status = 4;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  string image = 3;
  string description = 4;
  string status = 5;
}

message AreaId {
  string id = 1;
}

message AreaList {
  repeated AreaFull List = 1;
}

message AreaFull {
  string id = 1;
  string name = 2;
  string description = 3;
  string image = 4;
  string status = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}
